fixed Alignment issues + added new zainab portfolio image to avaoid clipping + imporove spacing in desgin + added testimonials + creatd css classes for mobile+tablet+laptop+dekstop where needed + footer fixed

--- a/page-css/paid-m.css/google-ads.css
+++ b/page-css/paid-m.css/google-ads.css
@@ -477,11 +477,13 @@ body.dark-mode .comp-icon img {
 
 .mock-table {
     font-size: 0.75rem;
+
 }
 
 .t-row {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 6px 0;
     border-bottom: 1px solid var(--bg-light);
 }
